# ratesb_web

./: LICENSE  README.md  pyproject.toml  setup.cfg
ratesb_python/common/: analyzer.py  util.py
ratesb_web/common/: analyzer.py  reaction_data.py
tests/: test_analyzer.py  test_classifier.py
tests/test_classifier_models/: amm.json  bidr.json  bidr_a.json  false.json  hill.json  imm.json  mm.json  mmcat.json  rmm.json  rmmcat.json  undr.json  undr_a.json  zero.json
tests/test_models/: false_0001.json  false_0002.json  false_1001.json  false_1003.json  false_1004.json  false_1005.json  false_1006.json  false_1010.json  false_1020.json  false_1021.json  false_1022.json  false_1030.json  false_1031.json  false_1032.json  false_1033.json  false_1034.json  false_1035.json  false_1036.json  false_1037.json  false_1040.json  false_1041.json  false_1042.json  false_1043.json  false_1044.json  true_1001.json  true_1002.json  true_1003.json  true_1004.json  true_1005.json  true_1010.json  true_1020.json  true_1021.json  true_1022.json  true_1030.json  true_1031.json  true_1033.json  true_1034.json  true_1035.json  true_1036.json  true_1040.json  (+4 more)
