[project]
name = "ratesb_web"
version = "0.2.4"
description = "backend support for ratesb"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Longxuan Fan", email = "longxuan@usc.edu"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "sympy"
]
